Fix tables scrollbars & selection highlight issue

--- a/popup.css
+++ b/popup.css
@@ -168,18 +168,20 @@ body {
   background-color: rgba(100%, 100%, 100%, 38%);
   /*mix-blend-mode: luminosity;*/
   padding: 3px 3px 3px 3px;
-}
-
-#saved-shaders-wrapper, #active-shaders-wrapper {
   pointer-events: none;
   position: relative;
   z-index: 0;
+}
+
+#saved-shaders-wrapper, #active-shaders-wrapper {
   box-sizing: border-box;
-  padding: 1px 1px 1px 1px;
+  padding: 1px;
+  box-shadow: inset 1px 1px 5px 1px hsla(262, 90%, 10%, 70%);
 }
 
 #saved-shaders-wrapper {
   height: 67%;
+  margin-bottom: 1px;
 }
 
 #active-shaders-wrapper {
@@ -187,17 +189,16 @@ body {
 }
 
 .shader-table {
+  pointer-events: auto;
+  position: relative;
+  z-index: -1;
   box-sizing: border-box;
   height: 100%;
   width: 100%;
-  box-shadow: inset 1px 1px 5px 1px hsla(262, 90%, 10%, 70%);
   overflow-y: overlay;
 }
 
 .shader {
-  pointer-events: auto;
-  position: relative;
-  z-index: -1;
   padding: 0 6px 0 4px;
   cursor: default;
   display: flex;
@@ -205,6 +206,7 @@ body {
 }
 
 .ui-resizable-handle {
+  pointer-events: auto;
   width: 100%;
 }
 /*
